# BaagChaal-SFML

./: .fuse_hidden000029e600000005  .gitignore  Baagchaal  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  about.txt  cmake_install.cmake  main.cpp
.cache/clangd/index/: Cell.cpp.00D04DA3DD0D2137.idx  Cell.h.AE5C222D4552CE8D.idx  Game.cpp.BAD2ACA03BB5664A.idx  Game.h.5C881FE0EE04D40F.idx  GameData.h.4B6FE108CF86F720.idx  LoadBoard.cpp.783CDABCD4A77990.idx  Loadboard.h.6B8A7D70B5DDF35D.idx  MainMenu.h.3C1AADE84FF2B3C8.idx  MainMenuState.h.0DE27F90EB35D82A.idx  Mainmenu.cpp.818CABD5C78D7756.idx  Node.h.79F4FBFA06791836.idx  Piece.cpp.BC7153BF3639A728.idx  Piece.h.49F08D08F03465B8.idx  asset_manager.h.B01BB66A94976A71.idx  const.h.F852621FBA9C3110.idx  goats.cpp.2D9D1852892D6A2A.idx  goats.h.5835B84339002A8C.idx  main.cpp.358926BCD6080C6E.idx  quitGame.cpp.30EA678C11546305.idx  quitGame.h.B41F8D058AC79AF1.idx  state.h.ADC0DC9EB755570F.idx  tigers.cpp.4C78F85D6F7E2902.idx  tigers.h.D4235B281589CF91.idx
includes/: AI.h  Cell.h  Client.h  Game.h  GameData.h  Loadboard.h  MainMenu.h  MainMenuState.h  Node.h  Piece.h  Server.h  asset_manager.h  const.h  goats.h  quitGame.h  state.h  tigers.h
src/: AI.cpp  Cell.cpp  Client.cpp  Game.cpp  LoadBoard.cpp  Mainmenu.cpp  Piece.cpp  Server.cpp  goats.cpp  quitGame.cpp  state.cpp  tigers.cpp
